syntax = "proto3";

package user;

service UsersService {
  rpc FindOne (UserById) returns (User);
  rpc FindByEmail (UserByEmail) returns (User);
  rpc FindMany (stream UserById) returns (stream User);
  rpc FindMe (UserById) returns (User);
}

message UserById {
  int32 id = 1;
}

message UserByEmail {
  string email = 1;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}
